wdl-analysis/tests/validation/strings.errors
warning[UnusedDeclaration]: unused declaration `a`
  ┌─ tests/validation/strings:8:12
  │
8 │     String a = "no problems here // /n /r /t /' /" /~ /$ /000 /777 /x00 /xfF /u0000 /uaAfF /U00000000 /UAaAaFfFf!"
  │            ^

warning[UnusedDeclaration]: unused declaration `b`
  ┌─ tests/validation/strings:9:12
  │
9 │     String b = "invalid escape sequence ~{"/j"}"
  │            ^

error: unknown escape sequence `/j`
  ┌─ tests/validation/strings:9:44
  │
9 │     String b = "invalid escape sequence ~{"/j"}"
  │                                            ^^ this is not a valid WDL escape sequence

warning[UnusedDeclaration]: unused declaration `c`
   ┌─ tests/validation/strings:10:12
   │
10 │     String c = 'line /
   │            ^

error: literal strings may not contain line continuations
   ┌─ tests/validation/strings:10:22
   │  
10 │       String c = 'line /
   │ ╭──────────────────────^
11 │ │                 continuation'
   │ ╰^ remove this line continuation

warning[UnusedDeclaration]: unused declaration `d`
   ┌─ tests/validation/strings:12:12
   │
12 │     String d = "invalid ~{"octal"} here: /0"
   │            ^

error: invalid octal escape sequence
   ┌─ tests/validation/strings:12:42
   │
12 │     String d = "invalid ~{"octal"} here: /0"
   │                                          ^ expected a sequence of three octal digits to follow this

warning[UnusedDeclaration]: unused declaration `e`
   ┌─ tests/validation/strings:13:12
   │
13 │     String e = "/xnn is an invalid hex escape!"
   │            ^

error: invalid hex escape sequence
   ┌─ tests/validation/strings:13:17
   │
13 │     String e = "/xnn is an invalid hex escape!"
   │                 ^^ expected a sequence of two hexadecimal digits to follow this

warning[UnusedDeclaration]: unused declaration `f`
   ┌─ tests/validation/strings:14:12
   │
14 │     String f = "this /u000 is too short"
   │            ^

error: invalid unicode escape sequence
   ┌─ tests/validation/strings:14:22
   │
14 │     String f = "this /u000 is too short"
   │                      ^^ expected a sequence of four hexadecimal digits to follow this

warning[UnusedDeclaration]: unused declaration `g`
   ┌─ tests/validation/strings:15:12
   │
15 │     String g = 'this /UAAAXAAAA contains a non-hex character!'
   │            ^

error: invalid unicode escape sequence
   ┌─ tests/validation/strings:15:22
   │
15 │     String g = 'this /UAAAXAAAA contains a non-hex character!'
   │                      ^^ expected a sequence of eight hexadecimal digits to follow this

warning[UnusedDeclaration]: unused declaration `h`
   ┌─ tests/validation/strings:16:12
   │
16 │     String h = "can't have a    tab!"
   │            ^

error: literal strings cannot contain tab characters
   ┌─ tests/validation/strings:16:29
   │
16 │     String h = "can't have a    tab!"
   │                             ^^^^ escape this tab with `/t`

warning[UnusedDeclaration]: unused declaration `i`
   ┌─ tests/validation/strings:17:12
   │
17 │     String i = "can't have a
   │            ^

error: literal strings cannot contain newline characters
   ┌─ tests/validation/strings:17:29
   │  
17 │       String i = "can't have a
   │ ╭────────────────────────────^
18 │ │                 newline"
   │ ╰^ escape this newline with `/n`

error: unknown escape sequence `/j`
   ┌─ tests/validation/strings:24:36
   │
24 │         invalid escape sequence ~{"/j"}
   │                                    ^^ this is not a valid WDL escape sequence

